🐛 (metadata) Update homepage title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import HomeIntro from '../components/HomeIntro.astro';
 import TransitCard from '../components/TransitCard.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="One Bright Light — Oakland-based Front-end Web Developer">
 	<div class="wrapper">
 		<main>
 			<HomeIntro />
