✨ (metadata) add page description requirement.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,9 @@ import HomeIntro from '../components/HomeIntro.astro';
 import TransitCard from '../components/TransitCard.astro';
 ---
 
-<Layout title="One Bright Light — Oakland-based Front-end Web Developer">
+<Layout
+	title="One Bright Light — Oakland-based Front-end Web Developer"
+	description="The personal website of Christopher Robert Kennedy-Nuñez.">
 	<div class="wrapper">
 		<main>
 			<HomeIntro />
